<resources>
    <string name="app_name">Challenge Chapter 5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text_loginPage">Don\'t have account? <b>Register</b></string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_btnLogin">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_re_type_password">Re-type Password</string>
    <string name="hint_btnRegister">Register</string>
    <string name="welcome_text">Hello, %s</string>
    <string name="error_password_confirm">Password does not match!</string>
    <string name="hint_btnLogout">Logout</string>
    <string name="hint_btn_update">Update</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated</string>
    <string name="error_fetch_movies">Network Error!</string>
</resources>